--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -8,7 +8,8 @@
 .slide-up-enter-active, .slide-up-leave-active,
 .fade-enter-active, .fade-leave-active,
 .slide-right-enter-active, .slide-right-leave-active,
-.popup-slide-up-enter-active, .popup-slide-up-leave-active {
+.popup-slide-up-enter-active, .popup-slide-up-leave-active,
+.fade-slide-right-enter-active, .fade-slide-right-leave-active {
   transition: all .2s linear;
 }
 .slide-up-enter, .slide-up-leave-to {
@@ -27,7 +28,11 @@
   transform: translate3d(0, 100%, 0);
   opacity: 0;
 }
-.popup-slide-up-enter-to, .popup-slide-up-leave { //enter-to为进入后状态，leave为离开前状态
+.popup-slide-up-enter-to, .popup-slide-up-leave, .fade-slide-right-enter-to, .fade-slide-right-leave { //enter-to为进入后状态，leave为离开前状态
   transform: translate3d(0, 0, 0);
   opacity: 1;
+}
+.fade-slide-right-enter, .fade-slide-right-leave-to {
+  transform: translate3d(-100%, 0, 0);
+  opacity: 0;
 }
